--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,5 +228,7 @@ set(THREADS Threads::Threads)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_executable(psuTest src/psuTest.cpp)
+add_executable(pubField src/pubField.cpp)
 target_link_libraries(psuTest ${catkin_LIBRARIES} ${PSULibs})
+target_link_libraries(pubField ${catkin_LIBRARIES} ${PSULibs})
 
