Updated remote branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,24 +211,24 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-find_library(MID HCoilMiddlewareLib )
-find_library(PSU  DxkdpLib )
-find_library(LINACT LinActuatorLib )
-find_library(TMETER LakeshoreF71Lib )
-find_library(SERIAL CppLinuxSerial )
-find_library( ASTAR a-star)
+# find_library(MID HCoilMiddlewareLib )
+# find_library(PSU  DxkdpLib )
+# find_library(LINACT LinActuatorLib )
+# find_library(TMETER LakeshoreF71Lib )
+# find_library(SERIAL CppLinuxSerial )
+# find_library( ASTAR a-star)
 
-set(MiddlewareLibs ${MID} ${PSU} ${LINACT} ${TMETER} ${SERIAL} Threads::Threads)
-set(PSULibs ${PSU} ${SERIAL})
-set(LinActLibs ${LINACT} ${SERIAL})
-set(TmeterLibs ${TMETER} ${SERIAL})
-set(EIGEN Eigen3::Eigen)
-set(THREADS Threads::Threads)
+# set(MiddlewareLibs ${MID} ${PSU} ${LINACT} ${TMETER} ${SERIAL} Threads::Threads)
+# set(PSULibs ${PSU} ${SERIAL})
+# set(LinActLibs ${LINACT} ${SERIAL})
+# set(TmeterLibs ${TMETER} ${SERIAL})
+# set(EIGEN Eigen3::Eigen)
+# set(THREADS Threads::Threads)
 
-include_directories(${CMAKE_SOURCE_DIR}/include)
+# include_directories(${CMAKE_SOURCE_DIR}/include)
 
-add_executable(psuTest src/psuTest.cpp)
-add_executable(pubField src/pubField.cpp)
-target_link_libraries(psuTest ${catkin_LIBRARIES} ${PSULibs})
-target_link_libraries(pubField ${catkin_LIBRARIES} ${PSULibs})
+# add_executable(psuTest src/psuTest.cpp)
+# add_executable(pubField src/pubField.cpp)
+# target_link_libraries(psuTest ${catkin_LIBRARIES} ${PSULibs})
+# target_link_libraries(pubField ${catkin_LIBRARIES} ${PSULibs})
 
