bugfix in field node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
   geometry_msgs
+  std_msgs
 )
 
 ################################################
@@ -230,6 +231,11 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 add_executable(psuTest src/psuTest.cpp)
 add_executable(pubField src/pubField.cpp)
 add_executable(pubafield src/pubafield.cpp)
+add_executable(y_grads src/yGrads.cpp)
+add_executable(grad_node src/grad_node.cpp)
+
 target_link_libraries(psuTest ${catkin_LIBRARIES} ${PSULibs})
 target_link_libraries(pubField ${catkin_LIBRARIES} ${PSULibs})
+target_link_libraries(y_grads ${catkin_LIBRARIES} ${PSULibs})
 target_link_libraries(pubafield ${catkin_LIBRARIES})
+target_link_libraries(grad_node ${catkin_LIBRARIES} ${PSULibs})
