--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,9 +233,11 @@ add_executable(pubField src/pubField.cpp)
 add_executable(pubafield src/pubafield.cpp)
 add_executable(y_grads src/yGrads.cpp)
 add_executable(grad_node src/grad_node.cpp)
+add_executable( reinforcement_demo src/reinforcement_demos.cpp)
 
 target_link_libraries(psuTest ${catkin_LIBRARIES} ${PSULibs})
 target_link_libraries(pubField ${catkin_LIBRARIES} ${PSULibs})
 target_link_libraries(y_grads ${catkin_LIBRARIES} ${PSULibs})
 target_link_libraries(pubafield ${catkin_LIBRARIES})
 target_link_libraries(grad_node ${catkin_LIBRARIES} ${PSULibs})
+target_link_libraries( reinforcement_demo ${catkin_LIBRARIES} )
