--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,21 +228,10 @@ set(THREADS Threads::Threads)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-add_executable(psuTest src/psuTest.cpp)
-add_executable(pubField src/pubField.cpp)
-add_executable(pubafield src/pubafield.cpp)
-add_executable(y_grads src/yGrads.cpp)
-add_executable(grad_node src/grad_node.cpp)
 add_executable( reinforcement_demo src/reinforcement_demos.cpp)
 add_executable(PSU_node src/PSU_node.cpp)
-add_executable(FieldNode src/FieldNode.cpp)
+add_executable(Field_node src/Field_node.cpp)
 
-
-target_link_libraries(psuTest ${catkin_LIBRARIES} ${PSULibs})
-target_link_libraries(pubField ${catkin_LIBRARIES} ${PSULibs})
-target_link_libraries(y_grads ${catkin_LIBRARIES} ${PSULibs})
-target_link_libraries(pubafield ${catkin_LIBRARIES})
-target_link_libraries(grad_node ${catkin_LIBRARIES} ${PSULibs})
 target_link_libraries( reinforcement_demo ${catkin_LIBRARIES} )
 target_link_libraries(PSU_node ${catkin_LIBRARIES} ${PSULibs})
-target_link_libraries(FieldNode ${catkin_LIBRARIES})
+target_link_libraries(Field_node ${catkin_LIBRARIES})
