--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,7 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
   scripts/ali_sweep.py
+  scripts/input_field.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
